fix(RelativeRangeDatePicker): removed baseline alignment

--- a/src/components/RelativeRangeDatePicker/components/PickerDialog/PickerDoc.scss
+++ b/src/components/RelativeRangeDatePicker/components/PickerDialog/PickerDoc.scss
@@ -17,8 +17,4 @@ $block: '.#{variables.$ns}relative-range-date-picker-doc';
             width: 100%;
         }
     }
-
-    &__row {
-        vertical-align: baseline;
-    }
 }
